--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
   <script type="text/javascript" src="scripts/bookmarks.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>  
   <script type="text/javascript" src="scripts/index.js"></script>
+  <link rel="icon" href="data:;base64,iVBORwOKGO=" />
 </body>
 </html>
