able to grab form input data as an object

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" name="URL" id="bookmark-url" />
         <label for="bookmark-description">Description:</label>
         <input type="text" name="Description" id="bookmark-description" />
+        <button type="submit">Add item</button>
       </div>
     </form>
     <ul class="js-bookmark-list">
