--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <label for="bookmark-title">Title:</label> 
         <input type="text" name="title" id="bookmark-title" />
         <label for="bookmark-url">URL:</label> 
-        <input type="text" name="URL" id="bookmark-url" />
+        <input type="text" name="url" id="bookmark-url" />
         <label for="bookmark-description">Description:</label>
-        <input type="text" name="Description" id="bookmark-description" />
+        <input type="text" name="desc" id="bookmark-description" />
+        <label for="bookmark-rating">Rating:</label>
+        <input type="text" name="rating" id="bookmark-rating" />
         <button type="submit">Add item</button>
       </div>
     </form>
