--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Book Nook</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Book Nook</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="styles/index.css">
+  
 </head>
 <body>
   <div class="container">
-    <h1>Book Nook</h1>
-    <form id="js-bookmark-form">
-      <div class="intput-group">
-        <label for="bookmark-title">Title:</label> 
-        <input type="text" name="title" id="bookmark-title" />
-        <label for="bookmark-url">URL:</label> 
-        <input type="text" name="url" id="bookmark-url" />
-        <label for="bookmark-description">Description:</label>
-        <input type="text" name="desc" id="bookmark-description" />
-        <label for="bookmark-rating">Rating:</label>
-        <input type="text" name="rating" id="bookmark-rating" />
-        <button type="submit">Add item</button>
-      </div>
-    </form>
+    
+    <section class="items-column">
+        <h1 class="navHead">Book Nook</h1>
+        <button class="navHead" type="submit">Add item</button>
+    </section>
+
+    <section class ="data-entry-section">
+      <form id="js-bookmark-form" >
+        <div class="intput-group">
+          <label for="bookmark-title">Title:</label> 
+          <input type="text" name="title" id="bookmark-title" />
+          <label for="bookmark-url">URL:</label> 
+          <input type="text" name="url" id="bookmark-url" />
+          <label for="bookmark-description">Description:</label>
+          <input type="text" name="desc" id="bookmark-description" />
+          <label for="bookmark-rating">Rating:</label>
+          <input type="text" name="rating" id="bookmark-rating" />
+        </div>
+      </form>
+    </section>
+    
     <ul class="js-bookmark-list">
-      <li>Moonstone</li>
-      <li>SkyLark</li>
+      <!-- <li>Moonstone</li>
+      <li>SkyLark</li> -->
     </ul>
   </div>
   
