layout makes even more sense

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <section class="items-column">
         <h1 class="navHead">Book Nook</h1>
         <button class="navHead" type="submit">Add item</button>
+        <ul class="js-bookmark-list">
     </section>
 
     <section class ="data-entry-section">
       <form id="js-bookmark-form" >
-        <div class="intput-group">
+        <div class="input-group">
           <label for="bookmark-title">Title:</label> 
           <input type="text" name="title" id="bookmark-title" />
           <label for="bookmark-url">URL:</label> 
@@ -30,11 +31,12 @@
           <input type="text" name="desc" id="bookmark-description" />
           <label for="bookmark-rating">Rating:</label>
           <input type="text" name="rating" id="bookmark-rating" />
+          <button type="submit">Submit</button>
         </div>
       </form>
     </section>
     
-    <ul class="js-bookmark-list">
+   
       <!-- <li>Moonstone</li>
       <li>SkyLark</li> -->
     </ul>
