added delete data entry button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <label for="bookmark-rating">Rating:</label>
           <input type="text" name="rating" id="bookmark-rating" />
           <button type="submit">Submit</button>
+          <button type="button">Delete</button>
         </div>
       </form>
     </section>
