when hovering over bookmark, it turns yellow. event listener added on an item

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="items-column">
         <h1 class="navHead">Book Nook</h1>
         <button class="navHead" type="submit">Add item</button>
-        <ul class="js-bookmark-list">
+        <ul id="js-bookmark-list">
     </section>
 
     <section class ="data-entry-section">
