store states: adding and detail are working

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <section class="items-column">
         <h1 class="navHead">Book Nook</h1>
-        <button class="navHead" type="submit">Add item</button>
+        <button class="navHead js-navHead" type="submit">Add item</button>
         <ul id="js-bookmark-list">
     </section>
 
@@ -32,7 +32,7 @@
           <label for="bookmark-rating">Rating:</label>
           <input type="text" name="rating" id="bookmark-rating" />
           <button type="submit">Submit</button>
-          <button type="button">Delete</button>
+          <!-- <button type="button">Delete</button> -->
         </div>
       </form>
     </section>
