when in adding state adding page html is rendered, and when not, its not

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <section class="items-column">
         <h1 class="navHead">Book Nook</h1>
         <button class="navHead js-navHead" type="submit">Add item</button>
-        <ul id="js-bookmark-list">
+        <ul id="js-bookmark-list"></ul>
     </section>
 
+    <section class ="data-entry-section"></section>
+<!--     
     <section class ="data-entry-section">
       <form id="js-bookmark-form" >
         <div class="input-group">
@@ -32,15 +34,11 @@
           <label for="bookmark-rating">Rating:</label>
           <input type="text" name="rating" id="bookmark-rating" />
           <button type="submit">Submit</button>
-          <!-- <button type="button">Delete</button> -->
         </div>
       </form>
-    </section>
-    
-   
+    </section>  -->
       <!-- <li>Moonstone</li>
       <li>SkyLark</li> -->
-    </ul>
   </div>
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
