user can get value from dropwdown

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           <div class="dropdown">
               <button class="dropbtn">Dropdown</button>
               <div class="dropdown-content">
-                <a href="#">1 Star</a>
-                <a href="#">2 Star</a>
-                <a href="#">3 Star</a>
-                <a href="#">4 Star</a>
-                <a href="#">5 Star</a>
+                <a data-item-id="1" href="#">1 Star</a>
+                <a data-item-id="2" href="#">2 Star</a>
+                <a data-item-id="3" href="#">3 Star</a>
+                <a data-item-id="4" href="#">4 Star</a>
+                <a data-item-id="5" href="#">5 Star</a>
               </div>
           </div>
         </div>
