user can filter by rating

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
           <div class="dropdown">
               <button class="dropbtn">Dropdown</button>
-              <div class="dropdown-content">
+              <div class="dropdown-content"><a 
+                <a data-item-id="0" href="#">None</a>
                 <a data-item-id="1" href="#">1 Star</a>
                 <a data-item-id="2" href="#">2 Star</a>
                 <a data-item-id="3" href="#">3 Star</a>
