--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <ul id="js-bookmark-list"></ul>
     </section>
     <section class ="data-entry-section"></section>
+    <form id="js-bookmark-form" ></form>
   </div>
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
