fixed bug where the adding an item element was rendering in the wrong section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           <div class="dropdown">
               <button class="dropbtn">Dropdown</button>
-              <div class="dropdown-content"><a 
+              <div class="dropdown-content">
                 <a data-item-id="0" href="#">None</a>
                 <a data-item-id="1" href="#">1 Star</a>
                 <a data-item-id="2" href="#">2 Star</a>
@@ -34,8 +34,9 @@
 
         <ul id="js-bookmark-list"></ul>
     </section>
-    <section class ="data-entry-section"></section>
-    <form id="js-bookmark-form" ></form>
+    <section class ="data-entry-section">
+      <form id="js-bookmark-form" ></form>
+    </section>
   </div>
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
