user can select rating via radiobutton

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <ul id="js-bookmark-list"></ul>
     </section>
     <section class ="data-entry-section">
-      <form id="js-bookmark-form" ></form>
+      <form id="js-bookmark-form" >
+      </form>
     </section>
   </div>
   
