--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <ul id="js-bookmark-list"></ul>
     </section>
     <section class ="data-entry-section">
-      <form id="js-bookmark-form" >
-      </form>
+      <form id="js-bookmark-form" ></form>
     </section>
+    <section class ="detail-entry-section"></section>
+ 
   </div>
+  <!-- <div class="js-error">hi</div> -->
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
