--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <section class ="detail-entry-section"></section>
  
   </div>
-  <!-- <div class="js-error">hi</div> -->
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="scripts/jQueryExtend.js"></script>
   <script type="text/javascript" src="scripts/Item.js"></script>
   <script type="text/javascript" src="scripts/store.js"></script>
   <script type="text/javascript" src="scripts/bookmarks.js"></script>
