cannot sort by 0 stars anymore, the dropdown is title sort

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
           <button class="js-navHead" type="submit">Add item</button>
 
           <div class="dropdown">
-              <button class="dropbtn">Dropdown</button>
+              <button class="dropbtn">SORT</button>
               <div class="dropdown-content">
-                <a data-item-id="0" href="#">None</a>
                 <a data-item-id="1" href="#">1 Star</a>
                 <a data-item-id="2" href="#">2 Star</a>
                 <a data-item-id="3" href="#">3 Star</a>
