--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section class ="detail-entry-section"></section>
  
   </div>
+  <section class="js-error"></section>
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
