--- a/index.html
+++ b/index.html
@@ -12,32 +12,35 @@
   <link rel="stylesheet" href="styles/dropdown.css">
   
 </head>
-<body>
-  <div class="container">
-    <section class="items-column">
-        <h1 class="navHead">Book Nook</h1>
-        <div class="navHead">
-          <button class="js-navHead" type="submit">Add item</button>
+  <body>
+    <div class="container">
+      <main role="main">
+      <section class="items-column">
+          <h1 class="navHead">Book Nook</h1>
+          <div class="navHead">
+            <button class="js-navHead" type="submit">Add item</button>
 
-          <div class="dropdown">
-              <button class="dropbtn">SORT</button>
-              <div class="dropdown-content">
-                <a data-item-id="1" href="#">1 Star</a>
-                <a data-item-id="2" href="#">2 Star</a>
-                <a data-item-id="3" href="#">3 Star</a>
-                <a data-item-id="4" href="#">4 Star</a>
-                <a data-item-id="5" href="#">5 Star</a>
-              </div>
+            <div class="dropdown">
+                <button class="dropbtn">SORT</button>
+                <div class="dropdown-content">
+                  <a data-item-id="1" href="#">1 Star</a>
+                  <a data-item-id="2" href="#">2 Star</a>
+                  <a data-item-id="3" href="#">3 Star</a>
+                  <a data-item-id="4" href="#">4 Star</a>
+                  <a data-item-id="5" href="#">5 Star</a>
+                </div>
+            </div>
           </div>
-        </div>
-        <ul id="js-bookmark-list"></ul>
-    </section>
-    <section class ="data-entry-section">
-      <form id="js-bookmark-form" ></form>
-    </section>
-    <section class ="detail-entry-section"></section>
-    <section class="js-error"></section>
-  </div>
+          <ul id="js-bookmark-list"></ul>
+      </section>
+      <section class ="data-entry-section">
+        <form id="js-bookmark-form" ></form>
+      </section>
+      <section class ="detail-entry-section"></section>
+      <section class="js-error"></section>
+    </div>
+  </body>
+</main>
 
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
