--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/dropdown.css">
+  <link rel="stylesheet" href="styles/error.css">
   
 </head>
   <body>
