description field is bigger

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <main role="main">
-      <section class="items-column">
+      <section role=region" class="items-column">
           <h1 class="navHead">Book Nook</h1>
           <div class="navHead">
             <button class="js-navHead" type="submit">Add item</button>
@@ -34,10 +34,10 @@
           </div>
           <ul id="js-bookmark-list"></ul>
       </section>
-      <section class ="data-entry-section">
+      <section role="region" class ="data-entry-section">
         <form id="js-bookmark-form" ></form>
       </section>
-      <section class ="detail-entry-section"></section>
+      <section role="region" class ="detail-entry-section"></section>
       <section class="js-error"></section>
     </div>
   </body>
