added more style

--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@
     <div class="container">
       <main role="main">
       <section role=region" class="items-column">
-          <h1 class="navHead">Book Nook</h1>
-          <div class="navHead">
-            <button class="js-navHead" type="submit">Add item</button>
-
-            <div class="dropdown">
-                <button class="dropbtn">SORT</button>
-                <div class="dropdown-content">
-                  <a data-item-id="1" href="#">1 Star</a>
-                  <a data-item-id="2" href="#">2 Star</a>
-                  <a data-item-id="3" href="#">3 Star</a>
-                  <a data-item-id="4" href="#">4 Star</a>
-                  <a data-item-id="5" href="#">5 Star</a>
-                </div>
+     
+          <div role ="banner" class="navHead-container">
+            <div class="heading-container">
+              <h1 class="navHead">Book</h1>
+              <h1 class="navHead">Nook</h1>
             </div>
+
+            <div>
+              <button class="js-navHead" type="submit">Add item</button>
+
+              <div class="dropdown">
+                  <button class="dropbtn">SORT</button>
+                  <div class="dropdown-content">
+                    <a data-item-id="1" href="#">1 Star</a>
+                    <a data-item-id="2" href="#">2 Star</a>
+                    <a data-item-id="3" href="#">3 Star</a>
+                    <a data-item-id="4" href="#">4 Star</a>
+                    <a data-item-id="5" href="#">5 Star</a>
+                  </div>
+              </div>
+            </div> 
+
           </div>
           <ul id="js-bookmark-list"></ul>
       </section>
