styles are lookgin good

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <h1 class="navHead">Nook</h1>
             </div>
 
-            <div>
+            <div class="add-sort">
               <button class="js-navHead" type="submit">Add item</button>
 
               <div class="dropdown">
@@ -37,14 +37,17 @@
                     <a data-item-id="5" href="#">5 Star</a>
                   </div>
               </div>
+
             </div> 
 
           </div>
           <ul id="js-bookmark-list"></ul>
       </section>
+
       <section role="region" class ="data-entry-section">
         <form id="js-bookmark-form" ></form>
       </section>
+
       <section role="region" class ="detail-entry-section"></section>
       <section class="js-error"></section>
     </div>
