fixed two axe recommendations

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <body>
     <div class="container">
       <main role="main">
-      <section role=region" class="items-column">
+      <section role="region" class="items-column">
      
-          <div role ="banner" class="navHead-container">
-            <div class="heading-container">
+          <div class="navHead-container">
+            <header class="banner" class="heading-container">
               <h1 class="navHead">Book</h1>
               <h1 class="navHead">Nook</h1>
-            </div>
+            </header>
 
             <div class="add-sort">
               <button class="js-navHead" type="submit">Add item</button>
