added some aria labels

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                     <a data-item-id="5" href="#">5 Star</a>
                   </div>
               </div>
-
             </div> 
 
           </div>
@@ -46,7 +45,7 @@
       </section>
 
       <section role="region" class ="data-entry-section">
-        <form id="js-bookmark-form" ></form>
+        <form aria-lael="Add Bookmark Entry" id="js-bookmark-form" ></form>
       </section>
 
       <section role="region" class ="detail-entry-section"></section>
