--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
 
       <section role="region" class ="data-entry-section">
-        <form aria-lael="Add Bookmark Entry" id="js-bookmark-form" ></form>
+        <form aria-label="Add Bookmark Entry" id="js-bookmark-form" ></form>
       </section>
 
       <section role="region" class ="detail-entry-section"></section>
@@ -58,7 +58,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="scripts/jQueryExtend.js"></script>
-  <script type="text/javascript" src="scripts/Item.js"></script>
   <script type="text/javascript" src="scripts/store.js"></script>
   <script type="text/javascript" src="scripts/bookmarks.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>  
